Ignoring log files.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,10 @@ commands =
 setenv = 
     OPENAIKEY = dummy
 
+[tool.poetry.scripts]
+# fafa: cmd; wibble: package; wobble: .py; warble: method
+rnafoldcmdtest = "cmdrnafold.RNAtest:test"
+
 [testenv:autofix]
 description = run linters
 skip_install = true
